[package]
name = "image-data"
description = "Process image band values as data, for use in procedural generation projects"
readme = "README.md"
version = "0.1.0"
license = "MIT"
authors = ["Duncan McGreggor <oubiwann@gmail.com>"]
repository = "https://github.com/oxur/image-data"
documentation = "https://docs.rs/image-data/"
exclude = ["/.github", "/resources", ".gitignore"]
edition = "2018"

[lib]
name = "imgdata"

[dependencies]
image = "0.23.4"
ron = "0.5.1"
serde = { version = "1", features = ["serde_derive"] }
